# IR-General-Library

./: CMakeLists.txt  README.md
include/: IR-General-Library.hpp
